# lib_C

./: CMakeLists.txt  README.md  dependencies.txt
include/lib_C/: lib_C.hpp
src/: lib_C.cpp
test-catch/: CMakeLists.txt  test_lib_c.cpp
